client/styles/components/_carousel.scss
//-----------------------------------------------------------------------------
// CAROUSEL - Flickity instances:
// On records page .carousel
// On home page .explore-carousel
//-----------------------------------------------------------------------------

.is-draggable .flickity-viewport {
  cursor: ew-resize;
}

.carousel {
  border: 1px white solid;
  border-width: 1px 0;
  @include imgpanel-h;
  overflow: hidden;
  outline: black;

  &__image {
    @include imgpanel-h;
    object-fit: cover;
    opacity: 0;

    &.is-selected {
      outline: 1px white solid;
    }

    &.flickity-lazyloaded {
      opacity: 1;
      transition: opacity 1s;

      &:not(.is-selected) {
        filter: blur(2px);
        opacity: 0.5;
      }
    }
  }

  .flickity-prev-next-button {
    @include button-reset;

    width: 6rem;
    height: 100%;
    position: relative;
    opacity: 0.6;
    padding: 1rem;
    fill: white;
    color: white;

    &.previous {
      left: 0;
      cursor: w-resize;

      &:hover {
        opacity: 1;
        background-image: linear-gradient(270deg,
            rgba(0, 0, 0, 0),
            rgba(0, 0, 0, 0.4));
      }
    }

    &.next {
      float: right;
      cursor: e-resize;

      &:hover {
        opacity: 1;
        background-image: linear-gradient(90deg,
            rgba(0, 0, 0, 0),
            rgba(0, 0, 0, 0.4));
      }
    }
  }
}

.single_image_container {
  display: flex;
  justify-content: center;
  border: 1px white solid;
  border-width: 1px 0;

  // img { display: block;}

  .single_image {
    max-height: 36rem;
    border: 1px white solid;
    border-width: 0 1px;
  }
}

/* Used on home and explore pages.
  Same offset style as on the museum sites
*/
.explore-carousel {
  background-image: linear-gradient(to bottom, grey(0), grey(10));
  background-color: #fff;
  color: #000;

  &--dark {
    background-image: none;
    background-color: #000;
    color: #fff;
  }

  .flickity-enabled {
    padding-left: $grid-gutter; // match container

    &:focus {
      outline: none;
    }
  }

  .flickity-viewport {
    overflow: hidden;
    margin-left: var(--container-offset); // updates on resize
  }

  .flickity-prev-next-button {
    width: 1.5rem;
    appearance: none;
    background-color: transparent;

    svg {
      height: 1.5rem; //IE
    }

    padding: 1rem 0;
    opacity: 0.6;
    fill: currentColor;
    color: currentColor;

    &:hover {
      opacity: 1;
    }

    &.next {
      float: none;
      margin-left: 1rem;
    }
  }

  &__cell {
    max-width: 30%;
    padding-right: $grid-gutter;
    width: 18rem;
  }

  &__cta {
    margin-top: $grid-gutter;
    display: inline-block;
    text-transform: uppercase;
    font-size: clamp-between(1rem, 1.125rem); // match card title
    font-weight: 700;
    color: currentColor;
    text-decoration: none;
    @include underline-zip;

    .icon {
      vertical-align: top;
    }
  }
}

/*
  Used in sph records where there are multiple images.
*/
.card-carousel {
  position: relative;


  &.flickity-enabled {
    display: grid;
    grid-template-rows: auto auto; // carousel, page-dots
    grid-template-areas: "carousel" "dots";

    &:focus {
      outline: none;
    }
  }

  .flickity-viewport {
    overflow: hidden;
    aspect-ratio: 4/3;
  }

  &__cell {
    width: 100%;
  }

  img {
    display: block;
    aspect-ratio: 4/3;
    width: 100%;
    object-fit: cover;
  }

  .flickity-prev-next-button {
    grid-area: carousel;
    width: 3rem;
    color: white;
    appearance: none;
    background-color: transparent;
    position: absolute;
    top: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    opacity: 0.6;
    padding: 0.5rem;
    transition: all $transition-default;
  }

  &:hover {
    .flickity-prev-next-button {
      opacity: 1;
    }
  }

  .previous {
    left: 0;
    cursor: w-resize;

    &:hover {
      background-image: linear-gradient(90deg,
          rgba(0, 0, 0, 0.4),
          rgba(0, 0, 0, 0),
        );
    }
  }

  .next {
    right: 0;
    cursor: e-resize;

    &:hover {
      background-image: linear-gradient(90deg,
          rgba(0, 0, 0, 0),
          rgba(0, 0, 0, 0.4));
    }
  }

  .flickity-page-dots {
    // position: absolute;
    // top: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0.5rem 0;
    padding: 0;
    flex-wrap: wrap;

    li {
      // invisible border increases target size
      display: block;
      width: 1rem;
      height: 1rem;
      background-color: grey(20);
      border-radius: 50%;
      border: 0.25rem solid transparent;
      background-clip: padding-box;
      cursor: pointer
    }

    .is-selected {
      background-color: black;
    }
  }
}

